--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,4 @@
-/* ========== RESET & BASE STYLES ========== */
+/* ========== MY BASE STYLES FOR DEISIGN ========== */
 * {
   margin: 0;
   padding: 0;
